...
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="title_login">ᕼEᒪᑭ!</string>
    <string name="description_login">An app that makes you know UBC better</string>
    <string name="menu_report_user">Reported User</string>
    <string name="report_review_title">Report Content</string>
    <string name="report_review_content">Please provide your reason for\nreporting below</string>
    <string name="report_review_hint">Please write your reason here ...</string>
    <string name="report_user">Report Associated User</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add_facility">Add Facility</string>
...
