<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:background="@color/facility_review_background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:backgroundTint="@color/facility_review_background_color">

                <TextView
                    android:id="@+id/userNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/facility_primary_text_color"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Peter Na"/>

                <TextView
                    android:id="@+id/userDateView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/facility_third_text_color"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="end"
                    android:text="2022/8/25/2/24/1"/>

            </LinearLayout>

            <RatingBar
                android:id="@+id/userRateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="3dp"
                android:progressTint="@color/yellow"
                android:progressBackgroundTint="@color/yellow"
                style="?android:attr/ratingBarStyleSmall"/>

            <TextView
                android:id="@+id/userDescriptionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/facility_primary_text_color"
                android:text="COMMENT CMMENT COMEMNT"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:backgroundTint="@color/white">

                <CheckBox
                    android:id="@+id/upVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/upvote"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/upVoteCount"
                    android:textColor="#696069"
                    android:text="3" />

                <CheckBox
                    android:id="@+id/downVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/downvote"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/downVoteCount"
                    android:textColor="#696069"
                    android:text="3" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reportCommentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="12sp"
                    android:textColor="@color/facility_third_text_color"
                    android:textAllCaps="false"
                    android:gravity="center_vertical|end"
                    android:layout_marginRight="5dp"
                    android:background="@color/facility_review_background_color"
                    android:text="Report" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>